less/rflectcalendar.less
/*
 * Copyright Rflect.net and Alex K (c) 2011.
 */

html {
  height: 100%;
}

/*
  This is a class for <html> element.
  To prevent appearance of scrollbar in IE10+.
*/
.overflow-vertical-protected {
  overflow-y: hidden;
}

body {
  height: 100%;
  margin: 0;
  .default-font();
  /*Note(alexk): It's responsibility of container to provide width/height restrictions.*/
  min-width: 320px;
  min-height: 376px; /* -8px of .main-body margin-top.*/
  background-color: rgb(246,246,246);
  overflow-x: hidden;
}

body when (@UI_TYPE = 'MOBILE') {
  -webkit-touch-callout: none;
  -webkit-text-size-adjust: none;
  user-select: none;
  -webkit-user-select: none;
  -webkit-highlight: none;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

.main-body {
  background-color: #fff;
}

#daynames-prefix-wk {
  width: 61px;
  position: relative;
  height: 100%;
}

.main-pane-header-container-wk {
  margin-left: 61px; /*+1 pixel to match #grid-table border*/
}

.main-pane-header-daynames {
  .box-sizing();
  position: relative;
  overflow: hidden;
  height: 20px;
  line-height: 20px;
  padding-left: 61px; /*+1 pixel to match #grid-table border*/

  border-bottom: 1px solid #e5e5e5;
  margin-bottom: -1px;
  background-color: rgb(246, 246, 246);
  padding-right: 19px; /*to compensate 17px scrollbar + 2px from borders of upper table*/
}

.main-pane-header-wk-daynames {
  margin-left: -61px;
}

.main-pane-header-mn-daynames {
  margin-left: -45px;
}

.main-pane-header-mn-daynames-with-zippies {
  margin-left: -32px;
}

#weekmode-daynames-table {
  table-layout: fixed;
  width: 100%;
  height: 100%;
  text-align: center;
  color: #2c2c2c;
  overflow: hidden;
  position: relative;
}

.dayname-wk {
  position: relative;
  height: 100%;
}

.dayname-wk-inner {
  cursor: pointer;
}

.label-underlined {
  text-decoration: underline;
}

#main-pane-header-scrollable {
  border: 1px solid #e5e5e5;
  border-bottom-width: 0;
  /*we need this for ie7 as nested relative positioned elements
  don't get affected by overflow without it*/
  position: relative;
}

/**
 * Helper classes for scroll manipulation.
 * Note: scrollbar size may be different, on Mac, for example.
 */
.mphs-scroll-horz-on {
  overflow-x: hidden;
}

.mphs-scroll-horz-off {
  overflow-x: visible;
}

.mphs-scroll-vert-on {
  overflow-y: scroll;
  margin-right: 0;
  border-right: none !important;
}

.mphs-scroll-vert-off {
  overflow-y: visible;
  margin-right: 16px; /*17px of scrollbar - 1px of border.*/
}

/**
 * In ie7, underlying table, being set to 100% gets its width
 * using whole scrollable container width, including scrollbar.
 * We want to set table width excluding scrollbars, so it's wrapped
 * in div with "auto" width.
 * For this element pixel height is set.
 */
#alldayevents-grid-wrapper {
  width: auto;
  zoom: 1;
  position: relative;
}

#alldayevents-grid {
  position: relative;
  /*border-right: 1px solid #e5e5e5;*/
  /*border-bottom: 1px solid #e1e1e1;*/
  table-layout: fixed;
  width: 100%;
  height: 100%; /*opera needs explicitly set height*/
  /* default size: 30px event inner container + 2px borders
   + 1px upper margin + 12px expand sign*/
  vertical-align: top; /*for layers*/
  /*columns elements still take place after being shifted,
    so cover their previous positions*/
  overflow:  hidden;
}

.wk-ad-layers-cont-outer {
  height: inherit;
}

*:first-child+html .wk-ad-layers-cont-outer{
  height: 100%;
}

.wk-ad-layers-cont {
  /*overflow-x: visible;*/
  /*overflow-y: hidden;*/
  height: 100%;
  position: relative;
  z-index: 3;
}

.wk-ad-decoration-layer {
  height: 100%;
  position: relative;
  z-index: 1;
}

.wk-ad-decoration-layer-outer, .wk-ad-mask-layer {
  height: 100%;
  top: -200%;
  position: relative;
  /*margin-bottom: -100%;*/
  z-index: 1;
}

.wk-ad-events-layer {
  height: 100%;
  top: -100%;
  position: relative;
  /*margin-bottom: -100%;*/
  /*padding: 0 5px 0 5px;*/
  z-index: 1;
}

.wk-ad-mask {
  position: absolute;
  height: 100%;
  background: #cecece;
  .opacity(0.5);
}

#main-pane-header-wk-zippies {
  position: relative;
  overflow: hidden;
  height: 12px;
  margin-right: 19px;
}

#weekmode-zippies-table {
  position: relative;
  table-layout: fixed;
  width: 100%;
  height: 100%;
  /*text-align: right;*/
}

.wk-col-zippy-cont {
  position: relative;
  height: 100%;
}

#daynames-scroll-placeholder {
  width: 19px;
}

.weekgrid-prefix {
  width: 40px;
}

.border-collapse-left {
  margin-left: 0;
  border-left: none;
}

.alldayevent-cell {
  border: 1px solid #e5e5e5;
}

.no-tborder-right {
  border-right: 0;
}

#main-pane-body-scrollable-wk() {
  /*overflow-x: visible;*/
  border: 1px solid #e5e5e5;
  border-right: none;
  height: 400px;
  position: relative;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  overflow-scrolling: touch;
}

#main-pane-body-scrollable-wk when (@UI_TYPE = '') {
  #main-pane-body-scrollable-wk();
}

#main-pane-body-scrollable-wk when (@UI_TYPE = 'MOBILE') {
  #main-pane-body-scrollable-wk();
  z-index: 0;
}

#grid-table-outer-wrapper {
  width: auto;
  zoom: 1;
}

.mpbs-wk-scroll-horz-on {
  overflow-x: scroll;
  margin-bottom: 0;
}

.mpbs-wk-scroll-horz-off {
  overflow-x: visible;
}

#hours-container {
  float: left;
  position: absolute;
  width: 60px;
  border-right: 1px solid #e5e5e5;
  margin: 0;
  left: 0; /*This will be set to scrollable scrollLeft in expanded mode*/
}

#grid-table-wrapper-wk {
  position: relative;
  height: 1728px;
  margin-left: 61px;
  width: auto;
  /*overflow: hidden;*/

  /*This two rules fix too high .grid-table-wk-outer in IE9-11.*/
  padding-bottom: 24px;
}

.wk-grid-rows-cont {
  height: 100%;
}

.grid-table-wk-outer {
  position:absolute;
  top:0;
  height:1776px;
  overflow:hidden
}
/* ... */

